маленькие правки в concrete delays

--- a/concrete_delays/ConcreteDelayPredictor.ipynb
+++ b/concrete_delays/ConcreteDelayPredictor.ipynb
@@ -59,6 +59,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2081f9ef",
+   "metadata": {},
+   "source": [
+    "**Источники данных**  \n",
+    "\n",
+    "Таблица заявок — автоматически формируется из Google Forms и содержит исходную информацию о заказе бетона.  \n",
+    "\n",
+    "Отчёт по поставкам — агрегированная таблица, где фиксируются фактические результаты исполнения заявок.  \n",
+    "\n",
+    "Таблица заявок 2 — фактически новая таблица заявок, которая стала формироваться после перехода компании на React-приложение. Она заменила предыдущий источник (Google Forms) для ввода данных и теперь является основной точкой сбора информации о заказах бетона.  \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 411,
    "id": "c472c658-d027-4009-96fc-bb8be5aace24",
@@ -695,62 +709,8 @@
     "    'Укажите необходимый объём; м3' : 'volume',\n",
     "    'ФИО (ответственного за приёмку бетона)' : 'full_name',\n",
     "    'Телефон (ответственного за приёмку бетона)' : 'phone',\n",
-    "    'этаж : 'floor'    \n",
+    "    'этаж' : 'floor'    \n",
     "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 434,
-   "id": "19bdff72-c782-4131-a91b-536fd18adb7f",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['application_submission_datetime', 'planned_delivery_date',\n",
-       "       'planned_delivery_time', 'type', 'material', 'mobility', 'volume',\n",
-       "       'full_name', 'phone', 'object', 'position', 'block', 'constructive',\n",
-       "       'этаж', 'material_class'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 434,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_filtered_columns.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 430,
-   "id": "f79a2bf8-3c69-4184-add7-41db71bd3e79",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Дата и время подачи заявки', 'Дата', 'Время', 'Категория', 'Объект',\n",
-       "       'Позиция', 'Блок', 'Этаж', 'Конструктив', 'Материал', 'Марка',\n",
-       "       'Подвижность', 'Количество', 'Примечание', 'ФИО', 'Телефон',\n",
-       "       'Дата отгрузки', 'Фактический объём', 'Отметка о исполнении',\n",
-       "       'Согласование геодезистов',\n",
-       "       'Согласование энергетиков\\n(только в зимний период)'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 430,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2.columns"
    ]
   },
   {
@@ -8094,9 +8054,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -8108,7 +8068,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
